# flac2mp3

./: .gitignore  pyproject.toml
flac2mp3/: cli.py  clone.py  convert.py
